Cleanup the quantum ui import into React

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
 		<title>React App</title>
 		<!-- TODO: See if some of theses imports from quantum can be tossed (Some will be needed such as the bundle.js) -->
-		<link rel="shortcut icon" href="quantum/images/favicon.ico" />
+		<link rel="shortcut icon" href="favicon.ico" />
 		<link rel="stylesheet" href="quantum/css/base.css" />
 		<script src="quantum/js/libs/numeric.js"></script>
 		<script src="quantum/js/libs/processing.js"></script>
