cleaned up files

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,8 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>React App</title>
-		<!-- TODO: See if some of theses imports from quantum can be tossed (Some will be needed such as the bundle.js) -->
+		<title>Quantum Simulator</title>
 		<link rel="shortcut icon" href="favicon.ico" />
 	</head>
 	<body>
